objects/Referring_HCP_Staff__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referring HCP Staffs</relationshipLabel>
        <relationshipName>Referring_HCP_Staffs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Delegate_Level__c</fullName>
        <label>Delegate Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCP_Enrollment__c</fullName>
        <label>HCP Enrollment</label>
        <referenceTo>HCP_Enrollment__c</referenceTo>
        <relationshipLabel>Referring HCP Staffs</relationshipLabel>
        <relationshipName>Referring_HCP_Staffs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Referring HCP Staff</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>HCP_Enrollment__c</columns>
        <columns>Delegate_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HCPS-{000000}</displayFormat>
        <label>Referring HCP Staff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referring HCP Staffs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>